# ada-hub

./: .gitignore  CHANGELOG.md  CREDITS  Pipfile  README.adoc  README.md  ada-hub.py  index.html  pyproject.toml  pyproject.toml.bckupc  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: developer-task.md
.github/workflows/: changelog-generate.yml  python-app.yml  python-publish.yml
ada_hub/: __init__.py
ada_hub/allto/: __init__.py
ada_hub/errors/: __init__.py
ada_hub/lib/: constants.py
ada_hub/lib/ada_sense/: __init__.py  errors.py
ada_hub/lib/ada_sense/helpers/: config.py  converters.py
ada_hub/lib/api/: __init__.py
ada_hub/lib/config/: __init__.py  defaults.py
ada_hub/lib/gui/: __init__.py
ada_hub/lib/gui/helpers/: __init__.py
ada_hub/lib/helpers/: __init__.py  credits.py  debug.py  locale.py  network.py  parser.py  pid.py  system.py
ada_hub/libgui/models/: main_window.py
ada_hub/media/: icons.py
docs/: cmd_gui.rst  cmd_main.rst  conf.py  index.rst
docs/_build/doctrees/: cmd.doctree  cmd_cli.doctree  cmd_credits.doctree  cmd_gui.doctree  cmd_main.doctree  environment.pickle  index.doctree
docs/_build/doctrees/sources/: ada_hub.doctree  ada_hub.errors.doctree  ada_hub.lib.ada_sense.doctree  ada_hub.lib.config.doctree  ada_hub.lib.doctree  ada_hub.lib.gui.doctree  ada_hub.lib.gui.models.doctree  (+5 more)
docs/_build/html/: .buildinfo  cmd.html  cmd_cli.html  cmd_credits.html  cmd_gui.html  cmd_main.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/sources/: ada_hub.lib.gui.models.rst  ada_hub.lib.gui.rst  ada_hub.lib.helpers.rst  ada_hub.lib.rst  ada_hub.media.rst  modules.rst
python_playground/: Untitled.ipynb
scripts/: ada-hub  ada-hub.py  ada_hub.py
(+40 files in other folders)
