[tool.poetry]
name = "ada_hub"
version = "1.0.1-alpha.3"
description = "Application to view environment data."
authors = ["Taylor-Jayde Blackstone"]
license = "mit"

[tool.poetry.dependencies]
python = "3.8.3"
inspy-logger = "^1.0.3"
PySimpleGUI = "^4.20.0"
PySimpleGUIQt = "^0.35.0"
PySide2 = "^5.15.0 "
toml = "*"


[tool.poetry.dev-dependencies]
poetry = "^1.0.9"
imwatchingyou = "^2.3.0"
pipreqs = "^0.4.10"
sphinx = "^3.1.2"
sphinx-rtd-theme = "^0.5.0"
sphinx-argparse = "*"
sense-emu = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
